<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ImageView_preview_transparent"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:contentDescription="@string/imageDescription"
            android:foreground="@drawable/bg_transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView_preview"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/imageDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/ImageView_preview_transparent"
            tools:src="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/TextView_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/emerald"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/Button_play"
            app:layout_constraintEnd_toStartOf="@id/TextView_year"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView_preview"
            tools:text="7.7/10" />

        <TextView
            android:id="@+id/TextView_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gray"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/Button_play"
            app:layout_constraintEnd_toStartOf="@+id/TextView_duration"
            app:layout_constraintStart_toEndOf="@+id/TextView_rate"
            app:layout_constraintTop_toBottomOf="@+id/imageView_preview"
            tools:text="2019" />

        <TextView
            android:id="@+id/TextView_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gray"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/Button_play"
            app:layout_constraintEnd_toEndOf="@+id/ImageView_preview_transparent"
            app:layout_constraintStart_toEndOf="@id/TextView_year"
            app:layout_constraintTop_toBottomOf="@+id/imageView_preview"
            tools:text="90 Minutes" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Button_play"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:backgroundTint="@android:color/white"
            android:text="@string/play"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            app:icon="@drawable/ic_play"
            app:iconGravity="textStart"
            app:iconTint="@android:color/black"
            app:layout_constraintBottom_toTopOf="@+id/Button_download"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TextView_year" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Button_download"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:backgroundTint="@color/mine_shaft"
            android:text="@string/download"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:icon="@drawable/ic_download"
            app:iconGravity="textStart"
            app:iconTint="@android:color/white"
            app:layout_constraintBottom_toBottomOf="@+id/ImageView_preview_transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Button_play" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/RecyclerView_genres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:orientation="horizontal"
            app:layoutManager="LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/TextView_description"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ImageView_preview_transparent"
            tools:listitem="@layout/genre_textview" />

        <TextView
            android:id="@+id/TextView_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:padding="15dp"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/ImageButton_like"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/RecyclerView_genres"
            tools:text="kajsdkjh askdhahsd kashdjha j asdkhajksd  askdhakjshd askjdhak a aksdhjkasdhka asjdhak sdjh a kasdhka kasdhkjadh k asdkjhkjahsdj" />

        <Button
            android:id="@+id/ImageButton_done"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:backgroundTint="@android:color/black"
            android:drawableTop="@drawable/ic_done"
            android:text="@string/my_list"
            android:textAllCaps="false"
            app:layout_constraintBottom_toTopOf="@id/TextView_seasson"
            app:layout_constraintEnd_toStartOf="@id/ImageButton_like"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TextView_description" />

        <Button
            android:id="@+id/ImageButton_like"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:backgroundTint="@android:color/black"
            android:drawableTop="@drawable/ic_thumb_up"
            android:text="@string/rate"
            android:textAllCaps="false"
            app:layout_constraintBottom_toTopOf="@id/TextView_seasson"
            app:layout_constraintEnd_toStartOf="@+id/ImageButton_share"
            app:layout_constraintStart_toEndOf="@+id/ImageButton_done"
            app:layout_constraintTop_toBottomOf="@+id/TextView_description" />

        <Button
            android:id="@+id/ImageButton_share"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:backgroundTint="@android:color/black"
            android:drawableTop="@drawable/ic_share"
            android:text="@string/share"
            android:textAllCaps="false"
            app:layout_constraintBottom_toTopOf="@id/TextView_seasson"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ImageButton_like"
            app:layout_constraintTop_toBottomOf="@+id/TextView_description" />

        <TextView
            android:id="@+id/TextView_seasson"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:text="Seasons"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/RecyclerView_seasons"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ImageButton_like" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/RecyclerView_seasons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/black"
            android:orientation="vertical"
            app:layoutManager="LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TextView_seasson"
            tools:listitem="@layout/genre_textview" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>