<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/TextView_animation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/animation"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/TextView_animation_movies"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/TextView_animation_movies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/movies"
            android:textColor="@color/gray"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/RecyclerView_animation_movies"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TextView_animation" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/RecyclerView_animation_movies"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="horizontal"
            app:layoutManager="LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/TextView_animation_series"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TextView_animation_movies"
            tools:layout_editor_absoluteY="127dp"
            tools:listitem="@layout/preview_card" />

        <TextView
            android:id="@+id/TextView_animation_series"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/series"
            android:textColor="@color/gray"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/RecyclerView_animation_series"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/RecyclerView_animation_movies" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/RecyclerView_animation_series"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="horizontal"
            app:layoutManager="LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/TextView_comedy"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TextView_animation_series"
            tools:layout_editor_absoluteY="305dp"
            tools:listitem="@layout/preview_card" />

        <TextView
            android:id="@+id/TextView_comedy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/comedy"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/TextView_comedy_movies"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/RecyclerView_animation_series" />

        <TextView
            android:id="@+id/TextView_comedy_movies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/movies"
            android:textColor="@color/gray"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/RecyclerView_comedy_movies"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TextView_comedy" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/RecyclerView_comedy_movies"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="horizontal"
            app:layoutManager="LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/TextView_comedy_series"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TextView_comedy_movies"
            tools:listitem="@layout/preview_card" />

        <TextView
            android:id="@+id/TextView_comedy_series"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/series"
            android:textColor="@color/gray"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/RecyclerView_comedy_series"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/RecyclerView_comedy_movies" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/RecyclerView_comedy_series"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            app:layoutManager="LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TextView_comedy_series"
            tools:listitem="@layout/preview_card" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>